--- a/HW4.Rmd
+++ b/HW4.Rmd
@@ -52,13 +52,8 @@ test$TARGET_FLAG <- NULL
 train$TARGET_FLAG <- as.factor(train$TARGET_FLAG)
 ```
 
-## Problem
+1. DATA EXPLORATION
 
-Our goal is to explore, analyze and model a dataset represent customer records at an auto insurance company. The objective is to build multiple linear regression and binary logistic regression models on the training data to predict the probability that a person will crash their car and also the amount of money it will cost if the person does crash their car.
-
-## 1. DATA EXPLORATION
-
-First we'll do some basic data cleansing. 
 
 ```{r}
 cleanMoney <- function(vector) {
@@ -76,52 +71,34 @@ test$BLUEBOOK <- cleanMoney(test$BLUEBOOK)
 test$OLDCLAIM <- cleanMoney(test$OLDCLAIM)
 ```
 
-Below we'll display a few basic EDA techniques to gain insight into our insurance dataset.
 
 
-
-### Basic Statistics
-
-The data is 1.8 Mb in size. There are 8,161 rows and 25 columns (features). Of all 25 columns, 14 are discrete, 11 are continuous, and 0 are all missing. There are 970 missing values out of 204,025 data points.
 
 ```{r, echo=FALSE, warning=FALSE}
 summary <- describe(train[,c(1:25)])[,c(2:5,8,9,11,12)]
 knitr::kable(summary)
 ```
 
-### Compare Target in Training
-
-We make sure there are no issues with an inappropriate distribution of the target variable in our training data.  We also confirm that the cases where the target amount is = 0 is equivalent to the number of target flags that were not claims.
-
 ```{r, echo=FALSE, warning=FALSE}
 knitr::kable(table(train$TARGET_FLAG))
 sum(train$TARGET_AMT ==0)
 ```
 
-### Histogram of Variables
-
+#Histogram
 ```{r, echo=FALSE, warning=FALSE}
 out <- split_columns(train)
 plot_histogram(out$continuous)
 plot_bar(out$discrete)
 ```
 
-### Relationship of Predictors to Target
+#Relationship of Predict
 
 ```{r, echo=FALSE, warning=FALSE}
 plot_scatterplot(train[2:25,], "TARGET_AMT", "jitter")
 ```
 
-## 2. DATA PREPARATION
+2. DATA PREPARATION
 
-### Variable Adjustments
-
-We'll make a few adjustments here based on some of the plotting we see.  
-
-* Let's make HomeKids a Boolean instead of a factor.  
-* There are some CAR_AGE with - numbers.   Let's make that 0. 
-* There are some blank Jobs.   Let's code those as "Unknown".
-* We'll change Education levels 1 if PhD and Masters.
 
 
 ```{r}
@@ -138,22 +115,15 @@ test$JOB <- as.factor(test$JOB)
 train$EDUCATION <- ifelse(train$EDUCATION %in% c("PhD", "Masters"), 0, 1)
 ```
 
-### Plot and Review Missing
 
 ```{r}
 plot_missing(train)
 ```
 
-We need to make decisions about Age, Income, YOJ, Home_Value, and Car_Age.  After reviewing the test set, we are missing the same variables at about the same rate. 
-
 ```{r}
 mice_imputes <- mice(train, m = 2, maxit = 2, print = FALSE)
 densityplot(mice_imputes)
 ```
-
-We can see that 4 of the variables with missing values seem to be MAR, as the mice imputation distributions roughly match the existing.   The Age variable does not, which is interesting.   Perhaps people lying about their age?   We'll handle that differently, simply using median imputation for now.
-
-We'll also run the mice imputation again on both the train and test set.   Instead of using it for our models, however, we'll simplify our run and fill in our data.   This is not a good method, as it doesn't account for variability, but it should do fine for the sake of this exercise.  
 
 ```{r}
 m <- median(train$AGE, na.rm = T)
@@ -164,15 +134,8 @@ mice_test <- mice(test, m = 1, maxit = 1, print = FALSE)
 test <- complete(mice_test)
 ```
 
-## 3. BUILD MODELS
+3. BUILD MODELS
 
-### Problem 1:   Classification
-
-#### Model 1
-
-The first model fits includes all the variables.   A review of the VIF output of the model suggests some points that are highly colinear and a number of variables that may not be necessary.   Model 1 uses the formula:
-
-__target ~ .__
 
 ```{r, echo=FALSE, warning=FALSE}
 set.seed(121)
@@ -191,12 +154,6 @@ mod1 <- train(TARGET_FLAG ~., data = partial_train,
 knitr::kable(vif(mod1$finalModel))
 ```
 
-#### Model 2
-
-Our second model ignores the colinear issues, but removes models that seemed unnecessary in Model #1.   Model 2 uses the formula: 
-
-__TARGET_FLAG ~ KIDSDRIV + INCOME + PARENT1 + HOME_VAL + MSTATUS + JOB + TRAVTIME + CAR_USE + BLUEBOOK + TIF + CAR_TYPE + OLDCLAIM + CLM_FREQ + REVOKED + MVR_PTS + URBANICITY__
-
 ```{r, echo=FALSE, warning=FALSE}
 # remove low p-values
 mod2 <- train(TARGET_FLAG ~ KIDSDRIV + INCOME + PARENT1 + HOME_VAL +
@@ -212,12 +169,6 @@ mod2 <- train(TARGET_FLAG ~ KIDSDRIV + INCOME + PARENT1 + HOME_VAL +
             preProcess = c("center", "scale"))
 knitr::kable(vif(mod2$finalModel))
 ```
-
-#### Model #3
-
-Model #3 removes the variables with the 3 highest VIF values from model1, EDUCATION and SEX.   The model formula is:
-
-__TARGET_FLAG ~ KIDSDRIV + AGE + HOMEKIDS + YOJ + INCOME + PARENT1 + HOME_VAL + MSTATUS + JOB + TRAVTIME + CAR_USE + BLUEBOOK + TIF + CAR_TYPE + RED_CAR + OLDCLAIM + CLM_FREQ + REVOKED + MVR_PTS + CAR_AGE + URBANICITY__
 
 ```{r, echo=FALSE, warning=FALSE}
 ## Reduce Collinearity by removing high VIFs
@@ -236,11 +187,6 @@ mod3 <- train(TARGET_FLAG ~ KIDSDRIV + AGE + HOMEKIDS + YOJ +
 knitr::kable(vif(mod3$finalModel))
 ```
 
-#### Model #4
-
-Model #4 takes the advances in model #3 and removes those values shown to be poor predictors.   
-
-__TARGET_FLAG ~ KIDSDRIV + PARENT1 + HOME_VAL + MSTATUS + JOB + TRAVTIME + CAR_USE + BLUEBOOK + TIF + CAR_TYPE + OLDCLAIM + CLM_FREQ + REVOKED + MVR_PTS + CAR_AGE + URBANICITY__
 
 ```{r, echo=FALSE, warning=FALSE}
 ## reduce collinearity, and remove low values
@@ -259,13 +205,6 @@ mod4 <- train(TARGET_FLAG ~ KIDSDRIV +
 knitr::kable(vif(mod4$finalModel))
 ```
 
-### Problem 2:  Regression
-
-#### Model #1
-
-The first model fits includes all the variables.   
-
-__target ~ .__
 
 ```{r}
 set.seed(121)
@@ -281,12 +220,6 @@ mod1lm <- train(TARGET_AMT ~., data = train_regression,
               preProcess = c("center", "scale"))
 ```
 
-#### Model #2
-
-Model #2 we take start trimming out features with less impact.
-
-__TARGET_AMT ~ HOME_VAL +  CAR_USE + BLUEBOOK + TIF + CAR_TYPE + OLDCLAIM + CLM_FREQ + REVOKED + MVR_PTS + CAR_AGE + URBANICITY__
-
 ```{r}
 mod2lm <- train(TARGET_AMT ~ HOME_VAL +  
                   CAR_USE + BLUEBOOK + TIF + CAR_TYPE + 
@@ -300,11 +233,7 @@ mod2lm <- train(TARGET_AMT ~ HOME_VAL +
               preProcess = c("center", "scale"))
 ```
 
-#### Model 3
 
-Model #3 is pretty bare-bones and only reflects generally issues related to the car value or driver's legal issues.
-
-__TARGET_AMT ~ BLUEBOOK + REVOKED + MVR_PTS + CAR_AGE__
 
 ```{r}
 mod3lm <- train(TARGET_AMT ~ BLUEBOOK + REVOKED + MVR_PTS + 
@@ -317,15 +246,6 @@ mod3lm <- train(TARGET_AMT ~ BLUEBOOK + REVOKED + MVR_PTS +
               preProcess = c("center", "scale"))
 ```
 
-## 4. SELECT MODELS
-
-To help aid in model selection for the classification problem, we'll review their accuracy by making predictions on our holdout validation set, and comparing their performance using a variety of confusion matrix adjacent functions like fourfold plots, summary statistics, and ROC / AUC plots. 
-
-To aid in model selection for the regression problem, we'll compare the error in the fit of our models in a table and select from there. 
-
-### 1:  Classification
-
-### Fourfold Plots
 
 ```{r, echo=FALSE, warning=FALSE}
 preds1 <- predict(mod1, newdata = validation)
@@ -347,7 +267,6 @@ fourfoldplot(m3cM$table, color = c("#B22222", "#2E8B57"), main="Mod3")
 fourfoldplot(m4cM$table, color = c("#B22222", "#2E8B57"), main="Mod4")
 ```
 
-### Summary Statistics
 
 ```{r, echo=FALSE, warning=FALSE}
 eval <- data.frame(m1cM$byClass, 
@@ -361,7 +280,6 @@ row.names(eval) <- c("Model1", "Model2", "Model3", "Model4")
 knitr::kable(eval)
 ```
 
-### ROC / AUC
 
 ```{r, echo=FALSE, warning=FALSE}
 getROC <- function(model) {
@@ -380,11 +298,6 @@ getROC(mod3)
 getROC(mod4)
 ```
 
-### Model Selection - Classification
-
-While the first 2 models may have the most information, they also suffer from so co-linearity issues as shown by the variance VIF output.   Model #3 performs well, but has some additional variables that may be poor predictors of whether a neighborhood will be above or below the median crime rate.   Instead, while stripped out, we'll use Model #4.   
-
-Before we make predictions, let's run this final model over our full dataset, and review some summary diagnostic plots and output.  
 
 ```{r, echo=FALSE, warning=FALSE}
 finalmod <- train(TARGET_FLAG ~ KIDSDRIV + 
@@ -403,9 +316,6 @@ summary(finalmod)
 plot(finalmod$finalModel)
 ```
 
-### 2:  Regression
-
-Here we see a preference again for the simpler model.   We'll make our predictions using Model 3. 
 
 ```{r}
 df <- data.frame()
@@ -417,11 +327,6 @@ colnames(df)[1] <- "model"
 knitr::kable(df)
 ```
 
-## Make Predictions
-
-We make our final predictions, create a dataframe with the prediction and the predicted probabilities for our classification problem.   
-
-However, in case our predictive model got the classification portion wrong, we'll make a prediction on the target amount for all observations in the test set, regardless of whether we think they'll make a claim.  
 
 ```{r, warning=FALSE, message=FALSE}
 finalpreds <- predict(finalmod, test)
